--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@fortawesome/fontawesome-free": "^5.12.1",
     "axios": "^0.19.2",
     "jquery": "^3.4.1",
-    "lodash": "^4.17.15"
+    "lodash": "^4.17.15",
+    "owl.carousel": "^2.3.4"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
@@ -32,6 +33,6 @@
     "sass-loader": "^8.0.2",
     "webpack": "^4.41.6",
     "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3"
+    "webpack-dev-server": "^3.11.0"
   }
 }
